<resources>
    <string name="app_name">BoxB</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_register">Sign Up</string>
    <string name="title_greeting">Get Started</string>
    <string name="title_clients">Clients</string>
    <string name="title_logout">Log Out</string>
    <string name="title_infoClient">Client Info</string>


    <string name="title_sales">Sales</string>
    <string name="title_purchases">Purchases</string>
    <string name="title_expenses">Expenses</string>


    <string name="txt_username">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_iddocument">Document ID</string>


    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_photo">Photo</string>


    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_create_account">Create a new account</string>
    <string name="txt_already_account">Have an account?</string>

    <string-array name="types">
        <item>Sale</item>
        <item>Purchase</item>
        <item>Expense</item>
    </string-array>

    <string-array name="pays">
        <item>pay 1</item>
        <item>pay 2</item>
        <item>pay 3</item>
        <item>pay 4</item>
    </string-array>

    <string name="txt_user_LastName">Last Name</string>
    <string name="txt_date">Date</string>
    <string name="txt_name">Name</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_iva">IVA</string>

    <string name="btn_add">Add</string>
    <string name="title_addCliente">Add Client</string>
    <string name="title_addbill">Add Billing Statement</string>
    <string name="title_updateClient">Update</string>
    <string name="title_deleteClient">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="divisas">
        <item>CRC</item>
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
    </string-array>
</resources>