<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".FragmentAddClient">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/title_addCliente"
            android:textAlignment="center"
            android:textColor="@color/soft_white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txt_name_add_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:hint="@string/txt_name"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/txt_last_name_add_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:hint="@string/txt_user_LastName"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_AddClient_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:hint="@string/txt_iddocument"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_email_add_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_email"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_client_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_add"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>