<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/title_infoClient"
                android:textAlignment="center"
                android:textColor="@color/soft_white"
                android:textSize="24sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_InfoClient_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@android:drawable/ic_delete"
                app:backgroundTint="@color/green"
                app:fabCustomSize="30dp"
                app:fabSize="mini"
                app:maxImageSize="16dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/txt_InfoClient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:hint="@string/txt_name"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="@color/muted_white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_InfoClient_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:hint="@string/txt_user_LastName"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="@color/muted_white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_InfoClient_documentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:hint="@string/txt_iddocument"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="@color/muted_white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_InfoClient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_email"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="text"
            android:textColor="@color/soft_white"
            android:textColorHint="@color/muted_white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_InfoClient_update"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/title_updateClient"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:strokeColor="@color/soft_white"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_InfoClient_delete"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/title_deleteClient"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:strokeColor="@color/soft_white"
                app:strokeWidth="1dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>