<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/title_addbill"
            android:textAlignment="center"
            android:textColor="@color/soft_white"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/border"
            android:entries="@array/types"
            android:padding="15dp"
            android:popupBackground="@color/soft_white"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/border"
            android:entries="@array/pays"
            android:padding="15dp"
            android:popupBackground="@color/soft_white"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/txt_name_add_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icono_usuario"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="text"
            android:text="@string/txt_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_date_add_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icon_calen"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="text"
            android:text="@string/txt_date"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_amount_add_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icon_cuenta"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="text"
            android:text="@string/txt_amount"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_iva_add_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/soft_white"
            android:drawableEnd="@drawable/icon_cuenta"
            android:ems="10"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="text"
            android:text="@string/txt_iva"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_bill_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_add"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/soft_white"
            app:strokeWidth="1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>