<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.auth.RegisterFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="84dp"
            android:layout_height="113dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="#00FF0000"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="342dp"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/title_register"
                    android:textColor="@color/white"
                    android:textSize="34sp" />

                <EditText
                    android:id="@+id/txt_Register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/soft_white"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/txt_username"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_Register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/soft_white"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_Register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/soft_white"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_Register_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/soft_white"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/txt_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/open_sans_semibold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/title_register"
                    android:textSize="20sp"
                    app:cornerRadius="15dp"
                    app:strokeColor="@color/soft_white"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="179dp"
                android:layout_height="27dp"
                android:gravity="center|end"
                android:text="@string/txt_already_account"
                android:textColor="@color/soft_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/title_login"
                android:textColor="@color/green"
                android:textSize="20sp" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>